<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/app_textLoginUser"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_marginBottom="27dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_above="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editText_login_user"
            android:inputType="textEmailAddress"
            android:layout_width="279dp"
            android:layout_height="38dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="90dp"
            android:layout_above="@+id/editText_login_pass"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/app_textLoginPass"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_above="@+id/button_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/editText_login_pass"
            android:inputType="textPassword"
            android:layout_width="277dp"
            android:layout_height="38dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="90dp"
            android:layout_alignBaseline="@+id/textView12"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignLeft="@+id/editText_login_user"
            android:layout_alignStart="@+id/editText_login_user" />

        <Button
            android:text="@string/app_textButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/background_light"
            android:background="@android:color/holo_green_light"
            android:id="@+id/button_login"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@+id/button_signUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColorHighlight="@android:color/background_light"
            android:textAllCaps="false"
            android:onClick="press_signIn" />

        <TextView
            android:text="@string/app_textNotAccount"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_signUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="15dp" />
        />

        <Button
            android:text="@string/app_textButtonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/background_light"
            android:background="@android:color/holo_green_light"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/button_signUp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="press_signUp" />

        <TextView
            android:text="@string/app_textPassForgot"
            android:id="@+id/textView_forget_pass"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/app_textButtonExplication"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/background_light"
            android:background="@android:color/holo_green_light"
            android:id="@+id/button_video"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="right"
            android:layout_alignBaseline="@+id/textView_forget_pass"
            android:layout_alignBottom="@+id/textView_forget_pass"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>
</ScrollView>